# solved-ac

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  Solved.ac.run.xml  main  vcpkg.json
.github/workflows/: ci.yml
src/: CMakeLists.txt  hello.cpp  hello.hpp  main.cc  main.cpp  problem_includes.h  problem_includes.h.in  problem_manager.cc  problem_manager.h  solved.cc  solved.cpp  solved.h  solved.hpp
src/problems/: problem_1000.cc  problem_1000.h  problem_1001.cc  problem_1001.h  problem_1003.cc  problem_1003.h  problem_1008.cc  problem_1008.h  problem_1009.cc  problem_1009.h  problem_1012.cc  problem_1012.h  problem_10170.cc  problem_10170.h  problem_10171.cc  problem_10171.h  problem_10172.cc  problem_10172.h  problem_10178.cc  problem_10178.h  problem_1018.cc  problem_1018.h  problem_10250.cc  problem_10250.h  problem_1032.cc  problem_1032.h  problem_1037.cc  problem_1037.h  problem_10569.cc  problem_10569.h  problem_10699.cc  problem_10699.h  problem_10718.cc  problem_10718.h  problem_10773.cc  problem_10773.h  problem_10797.cc  problem_10797.h  problem_10807.cc  problem_10807.h  (+578 more)
tests/: CMakeLists.txt  hello_test.cpp  solved_test.cc  solved_test.cpp
